--- a/app/src/main/res/layout/recycler_row_mypage.xml
+++ b/app/src/main/res/layout/recycler_row_mypage.xml
@@ -4,7 +4,7 @@
     android:layout_height="wrap_content"
     android:orientation="horizontal">
 
-    <ImageView android:id="@+id/thumbImage"
+    <ImageView android:id="@+id/thumbnailUrl"
         android:layout_width="80dp"
         android:layout_height="80dp"
         android:layout_gravity="center"
@@ -17,7 +17,7 @@
         android:orientation="vertical"
 
         >
-        <TextView android:id="@+id/tvName"
+        <TextView android:id="@+id/title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_margin="10dp"
@@ -25,7 +25,7 @@
             android:textColor="@color/black"
             />
 
-        <TextView android:id="@+id/tvDesc"
+        <TextView android:id="@+id/url"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_margin="10dp"
