--- a/app/src/main/res/layout/activity_mypage.xml
+++ b/app/src/main/res/layout/activity_mypage.xml
@@ -243,13 +243,12 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
 
-        android:textStyle="bold"
-        android:textColor="@color/black"
-        android:text="{P}"
-
         android:layout_marginStart="115dp"
         android:layout_marginTop="335dp"
-        />
+        android:text="{P}"
+
+        android:textColor="@color/black"
+        android:textStyle="bold" />
 
     <ImageView
         android:layout_width="50dp"
