--- a/app/src/main/res/layout/recycler_row_mypage.xml
+++ b/app/src/main/res/layout/recycler_row_mypage.xml
@@ -4,7 +4,7 @@
     android:layout_height="wrap_content"
     android:orientation="horizontal">
 
-    <ImageView android:id="@+id/thumbnailUrl"
+    <ImageView android:id="@+id/imagePath"
         android:layout_width="80dp"
         android:layout_height="80dp"
         android:layout_gravity="center"
@@ -17,7 +17,7 @@
         android:orientation="vertical"
 
         >
-        <TextView android:id="@+id/title"
+        <TextView android:id="@+id/itemName"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_margin="10dp"
@@ -25,7 +25,7 @@
             android:textColor="@color/black"
             />
 
-        <TextView android:id="@+id/url"
+        <TextView android:id="@+id/level"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_margin="10dp"
@@ -34,6 +34,47 @@
             android:textColor="@color/black"
             />
 
+        <TextView android:id="@+id/exp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="10dp"
+            android:textSize="16sp"
+            android:maxLines="3"
+            android:textColor="@color/black"
+            />
+
+        <TextView android:id="@+id/plantedDate"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="10dp"
+            android:textSize="16sp"
+            android:maxLines="3"
+            android:textColor="@color/black"
+            />
+
+        <TextView android:id="@+id/daysPassed"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="10dp"
+            android:textSize="16sp"
+            android:maxLines="3"
+            android:textColor="@color/black"
+            />
+
+
+
     </LinearLayout>
+
+    <TextView
+        android:id="@+id/textView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="230dp"
+        android:layout_marginTop="35dp"
+        android:layout_marginEnd="20dp"
+        android:layout_weight="1"
+
+        android:background="@drawable/item_recycler_mypage_treelist" />
+
 
 </LinearLayout>
