--- a/app/src/main/res/layout/recycler_row_mypage.xml
+++ b/app/src/main/res/layout/recycler_row_mypage.xml
@@ -2,79 +2,95 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="horizontal">
+    android:orientation="horizontal"
+    >
 
-    <ImageView android:id="@+id/imagePath"
+    <ImageView
+        android:id="@+id/imagePath"
         android:layout_width="80dp"
         android:layout_height="80dp"
         android:layout_gravity="center"
         android:layout_marginStart="10dp"
-        />
+        android:contentDescription="@string/imageview_descriptor" />
 
     <LinearLayout
-        android:layout_width="wrap_content"
+        android:layout_width="290dp"
         android:layout_height="wrap_content"
         android:orientation="vertical"
 
         >
-        <TextView android:id="@+id/itemName"
+
+        <TextView
+            android:id="@+id/itemName"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_margin="10dp"
+            android:textColor="@color/black"
             android:textSize="20sp"
-            android:textColor="@color/black"
+            android:fontFamily="@font/comfortaa_bold"
             />
 
-        <TextView android:id="@+id/level"
+        <TextView
+            android:id="@+id/level"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_margin="10dp"
-            android:textSize="16sp"
             android:maxLines="3"
             android:textColor="@color/black"
-            />
+            android:textSize="16sp" />
 
-        <TextView android:id="@+id/exp"
+        <TextView
+            android:id="@+id/exp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_margin="10dp"
-            android:textSize="16sp"
             android:maxLines="3"
             android:textColor="@color/black"
-            />
+            android:textSize="16sp" />
 
-        <TextView android:id="@+id/plantedDate"
+        <TextView
+            android:id="@+id/plantedDate"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_margin="10dp"
-            android:textSize="16sp"
             android:maxLines="3"
             android:textColor="@color/black"
+            android:textSize="16sp"
+
+            android:text="심은 날짜"
             />
 
-        <TextView android:id="@+id/daysPassed"
+        <TextView
+            android:id="@+id/daysPassed"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_margin="10dp"
-            android:textSize="16sp"
             android:maxLines="3"
             android:textColor="@color/black"
+            android:textSize="16sp"
+
+            android:text="심고 경과한 일수"
             />
 
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="40dp"
+            android:background="@drawable/item_classification_line_mypage_treelist" />
 
+        <ImageButton
+            android:layout_width="48dp"
+            android:layout_height="48dp"
+            android:layout_marginStart="230dp"
+            android:layout_marginTop="-155dp"
+            android:layout_marginEnd="20dp"
+            android:layout_weight="1"
+
+            android:background="@drawable/item_recycler_mypage_treelist"
+            android:contentDescription="@string/item_classification_button"
+            android:clickable="false"
+            />
 
     </LinearLayout>
-
-    <TextView
-        android:id="@+id/textView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="230dp"
-        android:layout_marginTop="35dp"
-        android:layout_marginEnd="20dp"
-        android:layout_weight="1"
-
-        android:background="@drawable/item_recycler_mypage_treelist" />
 
 
 </LinearLayout>
