--- a/app/src/main/res/layout/activity_mypage_treelist.xml
+++ b/app/src/main/res/layout/activity_mypage_treelist.xml
@@ -31,12 +31,13 @@
         />
 
     <TextView
-        android:layout_width="318dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
 
-        android:layout_marginStart="35dp"
+        android:layout_marginStart="25dp"
         android:layout_marginTop="680dp"
 
+        android:fontFamily="@font/comfortaa_bold"
         android:text="Walking 30 to 60 minutes most days of the week drastically lowers your risk of heart disease" />
 
     <Button
